--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - flask-sqlalchemy=3.0.3
   - flask-wtf=1.2.1
   - jinja2=3.1.2
+  - psutil=5.9.0
   - sqlalchemy=2.0.21
   - werkzeug=2.3.7
   - wtforms=3.0.1
