--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ flask-sqlalchemy==3.0.5
 sqlalchemy==2.0.21
 email_validator==2.0.0
 flask-restx==1.1.0
-
+psutil==5.9.0
 python-dotenv==0.19.2
 
 gunicorn==20.1.0
